--- a/style.css
+++ b/style.css
@@ -73,13 +73,14 @@ body {
   width: 338px;
   height: 520px;
   background-color: blueviolet;
-  border: 5px solid #6ecbf5;
+  border: 10px double #6ecbf5;
   border-radius: 25px;
   text-align: center;
 }
 
+
 .Card img {
-  border-radius: 25px 25px 0px 0px;
+  border-radius:5%;
 }
 
 .Card h3 {
@@ -115,10 +116,8 @@ body {
  border-radius: 50%;
  width: 60px;
  height: 60px;
-}
-#fone{
-    
-}
+}   
+
 
 #logo img {
   position: static;
@@ -395,10 +394,10 @@ footer {
   background-image: url(img/fundo3.jpg);
   background-size: cover;
   background-position: bottom;
-  height: 75vh;
   height: 60px;
   align-items: center;
 }
+
 footer p {
   margin-top: 20px;
 }
